<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen android:title="@string/settings_account"
        android:key="account">


        <EditTextPreference
            android:key="local_port"
            android:title="@string/settings_local_port"
            android:defaultValue="@string/settings_default_sip_local_port"
            android:singleLine="true" />

        <ListPreference
            android:key="protocol"
            android:title="@string/settings_protocol"
            android:entries="@array/protocol_display_values2"
            android:entryValues="@array/sip_protocol"
            android:dialogTitle="@string/settings_protocol" />


        <EditTextPreference
            android:key="server_id"
            android:title="@string/settings_server_id"
            android:defaultValue="@string/settings_default_sip_server_id" />

        <EditTextPreference
            android:key="domain"
            android:title="@string/settings_domain"
            android:summary="@string/settings_domain2"
            android:defaultValue="@string/settings_default_sip_server_domain"
            android:singleLine="true" />

        <EditTextPreference
            android:key="server"
            android:title="@string/settings_server"
            android:defaultValue="@string/settings_default_sip_server_address"
            android:singleLine="true" />


<!--        <ListPreference-->
<!--        android:key="port"-->
<!--        android:title="@string/settings_port"-->
<!--        android:entries="@array/port_display_values2"-->
<!--        android:entryValues="@array/port_values2"-->
<!--        android:dialogTitle="@string/settings_port" />-->

        <EditTextPreference
            android:key="port"
            android:title="@string/settings_port"
            android:defaultValue="@string/settings_default_sip_server_port"
            android:singleLine="true" />



        <EditTextPreference
            android:key="username"
            android:title="@string/settings_username"
            android:singleLine="true"
            android:defaultValue="@string/pref_default_sip_user_id"/>

        <EditTextPreference
            android:singleLine="true"
            android:title="@string/settings_username1"
            android:key="fromuser"
            android:summary="@string/settings_callerid2"/>



        <EditTextPreference
            android:key="password"
            android:title="@string/settings_password"
            android:password="true"
            android:singleLine="true" />



        <EditTextPreference
            android:key="valid_of_registration"
            android:title="@string/settings_valid_of_registration"
            android:defaultValue="@string/settings_default_sip_validity_of_registration"
            android:singleLine="true" />


        <EditTextPreference
            android:key="heartbeat"
            android:title="@string/settings_sip_heartbeat"
            android:defaultValue="@string/settings_default_sip_heartbeat"
            android:singleLine="true" />

        <EditTextPreference
            android:key="max_heartbeat_timeout"
            android:title="@string/settings_max_heartbeat_timeout"
            android:defaultValue="@string/settings_default_max_heartbeat_timeout"
            android:singleLine="true" />


        <CheckBoxPreference
            android:key="wlan"
            android:title="@string/settings_wlan"
            android:defaultValue="true"/>

        <CheckBoxPreference
            android:key="3g"
            android:title="@string/settings_3g"
            android:summary="@string/settings_check" />
        <CheckBoxPreference
            android:key="edge"
            android:title="@string/settings_edge"
            android:summary="@string/settings_check" />
        <CheckBoxPreference
            android:key="vpn"
            android:title="@string/settings_vpn"
            android:summary="@string/settings_vpn2" />
    </PreferenceScreen>



</PreferenceScreen>
